reports/02-JupyterNotebooks.log
Traceback (most recent call last):
  File "/opt/anaconda3/envs/book/lib/python3.7/site-packages/jupyter_cache/executors/basic.py", line 163, in execute
    executenb(nb_bundle.nb, cwd=tmpdirname, timeout=timeout)
  File "/opt/anaconda3/envs/book/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/opt/anaconda3/envs/book/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/opt/anaconda3/envs/book/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/opt/anaconda3/envs/book/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
# Move your cursor just after the period, press tab, and a drop menu will appear showing all possible completions
np.
------------------

[0;36m  File [0;32m"<ipython-input-12-06f09a953826>"[0;36m, line [0;32m2[0m
[0;31m    np.[0m
[0m       ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-12-06f09a953826>, line 2)

